--- a/HTML/13강 웹페이지에 표 만들기/웹페이지에 표 만들기.md
+++ b/HTML/13강 웹페이지에 표 만들기/웹페이지에 표 만들기.md
@@ -74,3 +74,136 @@ table {
 - `tr(행)로 만들 요소`에는 `table-row` / `td(열)`로 만들 요소에는 `table-cell`을 작성한다.
 
 ## 2. 과제 하기
+![](./어렵다.png)
+```html
+<!-- html 파일 내부 -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="CSS/practice3.css" rel="stylesheet">
+</head>
+<body>
+    <div class="form-background">
+        <h1 class="box font">Your shopping cart</h1>
+        <div>
+            <table class="box list">
+                <thead>
+                    <tr>
+                        <th style="width : 50%; text-align :center;">ITEM</th>
+                        <th style="text-align : center">AMOUNT</th>
+                        <th style="text-align : center">PRICE</th>
+                        <th style="text-align : center">TOTAL</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <img src="마크.png" style="width : 50%; height : 50%; margin-left : 10px; margin-top : 5px;">
+                            <div style="float:right; width : 40%;">
+                                <h3>SONY</h3>
+                                <p>FE 70-200 mm F2.8 GM OSS</p>
+                            </div>
+                        </td>
+                        <td style="text-align : right">1</td>
+                        <td>1979.00</td>
+                        <td>1979.00</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="마크.png" style="width : 50%; height : 45%; margin-left : 10px; margin-top : 5px; object-fit : cover;">
+                            <div style="float:right; width : 40%;">
+                                <h3>SONY</h3>
+                                <p>FE 70-200 mm F2.8 GM OSS</p>
+                            </div>
+                        </td>
+                        <td style="text-align : right">1</td>
+                        <td>989.00</td>
+                        <td>989.00</td>
+                    </tr>
+                    <tr style="height : 40px">
+                        <td colspan="3" style="border-bottom : none;"></td>
+                        <td style="border-bottom : none;">2968.00</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="box">
+            <div style="float:left;">
+                <p class="font"><a href="#">Edit your shopping cart</a></p>
+            </div>
+            <div>
+                <form>
+                    <button type="submit;" class="Button">Choose payment method</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
+```
+``` css
+/* css파일 내부 */
+body {
+    margin : 0px;
+}
+
+div {
+    box-sizing : border-box;
+}
+
+.form-background {
+    width : 700px;
+    height : 525px;
+    background-color :lightblue;
+    padding : 20px;
+    margin : auto;
+
+}
+
+.box {
+    margin-left : 30px;
+}
+
+td, th {
+    border : 1px solid black;
+    border-left : none;
+    border-right : none;
+    border-top : none;
+}
+
+table {
+    border-collapse : collapse;
+}
+
+.Button {
+    background-color : darkblue;
+    border : 0px;
+    border-radius : 5px;
+    float:right;
+    font-size : 20px;
+    padding : 15px;
+    color : white;
+    margin-top : 20px;
+    width : 270px;
+    height : 60px;
+}
+
+.font {
+    color : darkblue;
+}
+
+.list {
+    width : 95%;
+    background-color : white;
+    border-radius : 15px;
+}
+```
+- 해결 안된 부분들
+1. 테이블 내부에 마크 이미지를 넣고, 이를 적용시키는 부분
+2. 그 마크 이미지 옆에 글자에 대한 조절
+3. 전체적으로 크기를 자유자재로 조작할 수 있는 코드를 만들어야 함
+4. Price와 Total의 숫자들 앞에 가격표시를 어떻게 해야되는지 모르겠음.
+- 다음 강에서 이에 대한 보강학습과 과제를 다시 해보도록 하자.
