고도 2d 플랫포머 튜토리얼 강의 정리본 1

--- a/Godot/강의보면서 정리해놓기 2D 플랫포머 게임/캐릭터 이동 구현하기/캐릭터 이동 구현하기.md
+++ b/Godot/강의보면서 정리해놓기 2D 플랫포머 게임/캐릭터 이동 구현하기/캐릭터 이동 구현하기.md
@@ -1,15 +1,19 @@
 # 캐릭터 이동 구현하기 (2025-05-20 ~ )
+> ## 바로가기
+> [1. 캐릭터를 타일 단위로 이동하게 구현하기](#1-globalgd-스크립트-파일로-픽셀-단위를-곱해서-캐릭터를-타일-단위로-이동하게-구현하기)<br>
+> [2. 캐릭터의 뼈대 구현하기](#2-이제-캐릭터의-기본적인-뼈대를-구현해봅시다)<br>
+> [3. 플레이어의 입력 처리하기](#3-플레이어의-입력을-처리하는-playergd-스크립트-파일-만들기)
 ## 1. Global.gd 스크립트 파일로, 픽셀 단위를 곱해서 캐릭터를 타일 단위로 이동하게 구현하기
 ### <span style="background-color:#E6E6FA; color : black; font-weight : bold;">캐릭터 속도를 구현할 때 왜 픽셀 단위를 신경써야 되나요?</span>
 - 우리가 캐릭터를 이동 시킬때는 속도 변수를 구현하고, 이를 토대로 캐릭터의 velocity 에 변수를 곱하거나 막 하는 식으로 구현한다.
-- 고도 엔진의 <span style="background-color:#fff5b1; color : black; font-weight : bold;">2D 게임</span>에서 <span style="background-color:#fff5b1; color : black; font-weight : bold;">기본 단위</span>는 <span style="background-color:#fff5b1; color : black; font-weight : bold;">'픽셀'</span>이다.
-- 그런데, 게임 타일맵을 살펴보면, <span style="background-color:#fff5b1; color : black; font-weight : bold;">타일 하나당 픽셀</span>이 <span style="background-color:#C0FFFF; color : black; font-weight : bold;">32 X 32</span> 이거나, <span style="background-color:#DCFFE4; color : black; font-weight : bold;">64 x 64</span> 등등 여러 가지 형식의 픽셀 단위가 존재한다.
+- 고도 엔진의 <span style="background-color:#fff5b1; color : black; font-weight : bold;">2D 게임</span>에서 `기본 단위`는 `'픽셀'`이다.
+- 그런데, 게임 타일맵을 살펴보면, `타일 하나당 픽셀`이 `32 X 32` 이거나, `64 x 64` 등등 여러 가지 형식의 픽셀 단위가 존재한다.
 - 우리가 조작할 캐릭터가 픽셀 단위로 움직이는 거가 속도를 구성하기 편할까
 - 아니면, `타일 단위로 움직이게 속도를 구현하는 것이 편할까?`
 - 우리는 속도에 타일 하나당의 픽셀 값을 곱해서, `캐릭터의 속도가 한 타일당 움직이도록 구현하는 디자인 패턴`을 사용해볼 것이다.
 
 ### 그러면, 구현해봅시다!
-``` gdscript
+``` GDScript
 # global.gd 스크립트 파일 내부 속
 extends Node
 
@@ -117,5 +121,223 @@ func _physics_process(delta: float) -> void:
 	# _physics_process 사용시 추가해야 될 코드 == 충돌 고려하여 이동을 처리한다.
 	move_and_slide()
 ```
-- 이곳 마크다운 문자에서 보기 힘들다면, 코드를 복사한 후, GDScript 에서 확인하면 될 것같다.
+- 이곳에서 보기 힘들다면, 코드를 복사한 후, GDScript 에서 확인하면 될 것같다.
+- 차근차근 살펴봅시다. 할 수 있다! :)
+### 2-1. 캐릭터의 속도, 가속, 감속에 대한 값을 인스펙터 창에서 설정할 수 있게 하기
+```GDScript
+# @export를 선언하여 인스펙터 창에서 조절 가능한 캐릭터 이동 설정값에 대한 변수를 선언한다.
+# 따라서, @export 가 있는 변수들은, player.tscn 씬을 선택하면 오른쪽 인스펙터 창에서, 해당 변수들의 값을 조절할 수 있다.
+@export var _speed : float = 8
+# 가속을 나타내는 변수
+@export var _acceleration : float = 16
+# 감속을 나타내는 변수
+@export var _deceleration : float = 32
+```
+- 위 부분이 바로 캐릭터의 속도, 가속, 감속에 대한 값을 인스펙터 창에서 설정할 수 있게 하는 코드이다.
+- > 속도 == `_speed : float = 8` <br>
+  > 가속 == `_acceleration : float = 16` <br>
+  > 감속 == `_deceleration : float = 32` <br>
+- 위의 변수들이 바로 각각에 대한 값들을 담는 변수이다.
+- 그리고, 코드를 살펴보면,
+```GDScript
+@export var _speed : float = 8
+```
+- 변수 선언 `var` 앞에 `@export`가 붙은 것을 확인할 수 있다.
+- 이는, 이 변수를 인스펙터 창에서 값을 설정할 수 있게 만들어주는 키워드이다.
+- 유니티의 public과 비슷한 개념으로 이해했다.<br>
+![](./1.png)<br>
+- 빨간 네모 박스들 중 맨 오른쪽 인스펙터 창을 보면, 해당 변수들의 값을 조절할 수 있게 설정된 것을 볼 수 있다.
+- 즉, `캐릭터들`마다 `각각의 속도, 가속, 감속`를 스크립트 파일 속이 아닌, 밖`(=인스펙터창)`에서도 설정할 수 있게 되었다. 만세!
+---
+### 2-2. 캐릭터의 점프 속도에 대한 변수
+``` GDScript
+# 캐릭터의 점프 속도에 대한 변수
+const JUMP_VELOCITY = -400.0
+```
+- 간단하다. 상수로 선언하여, 변경할 수 없다.
+---
+### 2-3. 게임 시작시 속도, 가속, 감속에 대한 값을 픽셀 단위에서 타일 단위로 변환
+``` GDScript
+# gd 스크립트가 시작된다면? ppt 값을 곱해 실제 속도를 타일 단위로 변환한다.
+func _ready():
+	# _speed의 속도에 타일 하나당 픽셀 수를 곱해서 정상적인 속도를 준다.
+	_speed *= Global.ppt
+	# _acceleration의 속도에 타일 하나당 픽셀 수를 곱해서 정상적인 속도를 준다.
+	_acceleration *= Global.ppt
+	# _deceleration의 속도에 타일 하나당 픽셀 수를 곱해서 정상적인 속도를 준다.
+	_deceleration *= Global.ppt
+```
+- 캐릭터의 속도, 가속, 감속에 해당하는 `변수`에 `Global.ppt` 를 사용하여, `전역 변수 ppt`의 값을 `곱`해주었다.
+- 따라서, 캐릭터는 이제 특별히 값을 조절하지 않는 한, `속도`는 `8 * 32` 의 값을 가지게 된다.
+- 똑같은 방식으로 `가속, 감속`에도 `적용`이 된다.
+---
+### 2-4. 입력에 대한 방향 이동과 점프를 구현한 메서드
+``` GDScript
+# character.gd 스크립트 파일에서 사용할 변수 선언
+var _direction : float
+
+# 퍼블릭 메서드로 코드들을 깔끔하게 묶어서 보기 편하게 설정함.
+#region Public Methods
+# 미구현
+func face_left():
+	pass
+# 미구현
+func face_right():
+	pass
+
+# 플레이어 입력에서 전달된 방향 (-1, 0, 1)을 _directino 에 저장한다.
+func run(direction : float):
+	# run 메서드로부터 받아온 direction 값을 _direction 값에 대입
+	_direction = direction
+
+func jump():
+	# 캐릭터가 바닥에 있다면?
+	if is_on_floor():
+		# Y축 좌표로 JUMP_VELOCITY 만큼 속도를 준다. == 점프하게 한다.
+		velocity.y = JUMP_VELOCITY
+#endregion
+```
+- 코드 겁나 길구만 ㅋㅋㅋㅋ
+> - 먼저, 우리가 플레이어 캐릭터를 조종할러면, 키보드나 조이스틱 같은 입력을 통해서 이동을 구현해야 한다.<br>
+> - 따라서, 플레이어 캐릭터 가지는 이동은 player.gd 스크립트 파일을 따로 파서, 그곳에서 입력에 대한 코드를 작성할 것이다.<br>
+> - 이렇게 플레이어 입력에 대한 코드를 따로 빼는 이유는, 이 character.gd 파일은 게임 속 등장하는 모든 캐릭터에 대한 뼈대를 제공하는 코드이기 때문이다.
+- 다시 돌아와서, 코드를 하나씩 살펴보자.
+#### `1. player.gd 파일에서 준 값을 저장할 변수 선언`
+``` GDScript
+# character.gd 스크립트 파일에서 사용할 변수 선언
+var _direction : float
+```
+- 우리는 `입력`을 `다른 스크립트 파일` `player.gd` 에서 받아온다고 했었다.
+- 입력을 우리는 숫자 `-1, 0, 1 과 같은 숫자`로 받을 것이다.
+- 즉, `플레이어가 입력한 방향`에 따라 `player.gd` 파일이 `-1, 0, 1` 의 숫자를 전달하는 것이다.
+- 그러니, `character.gd` 파일에서 이 `숫자들을 저장할 변수를 선언`한 것이다.
+
+#### `2. 플레이어 캐릭터가 왼쪽, 오른쪽 방향을 보는 것을 처리하는 메서드`
+미구현
+
+#### `3. player.gd 파일에서 준 값을 변수에 저장`
+``` GDScript
+# 플레이어 입력에서 전달된 방향 (-1, 0, 1)을 _directino 에 저장한다.
+func run(direction : float):
+	# run 메서드로부터 받아온 direction 값을 _direction 값에 대입
+	_direction = direction
+```
+- player.gd 스크립트 파일에서 사용할 run 메서드를 만든다.
+- run 메서드는, player.gd 스크립트 파일에서 전달한 float 변수 값이 저장된 direction 변수를
+- _direction 변수에다가 저장한다.
+- 즉, `player.gd` 스크립트 파일에서 `전달한 값`을 `_direction` 변수에 `저장`하는 `메서드`이다.
+- player.gd 스크립트에서 어떻게 character.gd 파일 속 run 메서드를 실행시켜요?
+- `3단`에서 설명하니 기다려라.
+---
+### `2-5. 매 프레임마다 캐릭터의 중력과 이동을 처리하는 메서드`
+``` GDScript
+# 매 프레임마다 중력/이동을 처리한다.
+func _physics_process(delta: float) -> void:
+	# 캐릭터가 바닥에 있지 않다면? (중력 처리)
+	if not is_on_floor():
+		# y축에 + 방향으로 중력을 줘서 캐릭터를 아래로 떨어뜨린다.
+		velocity += get_gravity() * delta
+		
+	# return 해서 받아온 _direction 값이 0이라면? (이동처리)
+	# 즉, 0으로 감소한다면
+	if _direction == 0:
+		# x축의 속도(velocity.x)를 = velocity.x(현재 값)값으로부터 0(목표값)까지 한번에 _deceleration * delta 값의 속도로 갈수 있다.
+		# 즉, x축의 속도를 0으로 만들어버려 캐릭터의 움직임을 막는다.
+		velocity.x = move_toward(velocity.x, 0, _deceleration * delta)
+	# x 축 속도가 0이거나 _direction의 방향이 velocity.x의 방향과 동일하다면?
+	# 즉, 움직이지 않았던 상태에서 가속하거나 || 같은 방향으로 계속 움직일러 한다면?
+	elif velocity.x == 0 || sign(_direction) == sign(velocity.x):
+		# 오른쪽, 또는 왼쪽을 결정하는 _direction 값 * _speed의 값으로 velocity.x 의 값을 _acceleration * delta 값의 속도로 이동한다.
+		velocity.x = move_toward(velocity.x, _direction * _speed, _acceleration * delta)
+	# 만약 반대 방향으로 이동할러고 한다면, 감속시킨다.
+	else:
+		velocity.x = move_toward(velocity.x, _direction * _speed, _deceleration * delta)
+		
+	# _physics_process 사용시 추가해야 될 코드 == 충돌 고려하여 이동을 처리한다.
+	move_and_slide()
+```
+> - 우리는 `캐릭터의 움직임`을 `매 프레임마다` `재생`하게 만들것이다.
+> - 이를 위해 `func _process(delta: float) -> void:` 를 사용하여, 매 프레임마다 코드를 `재생`하도록 구현하였다.
+> - 유니티의 Update() 를 생각하면 된다.
+- 돌아와서, 코드를 하나씩 살펴보자.
+``` GDScript
+func _process(delta:float) -> void:
+```
+- 위 코드를 입력해서, 매 프레임마다 아래 코드들을 체크하도록 구현하였다.
+```GDScript
+# 캐릭터가 바닥에 있지 않다면? (중력 처리)
+if not is_on_floor():
+	# y축에 + 방향으로 중력을 줘서 캐릭터를 아래로 떨어뜨린다.
+	velocity += get_gravity() * delta
+```
+- if not is_on_floor() 메서드를 활용하여, 캐릭터가 바닥에 있는지 확인한다.
+- 바닥에 있지 않다면? velocity += get_gravity() * delta 를 통해서, 중력을 줘버린다.
+``` GDScript
+# return 해서 받아온 _direction 값이 0이라면? (이동처리)
+if _direction == 0:
+	# x축의 속도(velocity.x)를 = velocity.x(현재 값)값으로부터 0(목표값)까지 한번에 _deceleration * delta 값의 속도로 갈수 있다.
+	# 즉, x축의 속도를 0으로 만들어버려 캐릭터의 움직임을 막는다.
+	velocity.x = move_toward(velocity.x, 0, _deceleration * delta)
+# x 축 속도가 0이거나 _direction의 방향이 velocity.x의 방향과 동일하다면?
+# 즉, 움직이지 않았던 상태에서 가속하거나 || 같은 방향으로 계속 움직일러 한다면?
+elif velocity.x == 0 || sign(_direction) == sign(velocity.x):
+	# 오른쪽, 또는 왼쪽을 결정하는 _direction 값 * _speed의 값으로 velocity.x 의 값을 _acceleration * delta 값의 속도로 이동한다.
+	velocity.x = move_toward(velocity.x, _direction * _speed, _acceleration * delta)
+# 만약 반대 방향으로 이동할러고 한다면, 감속시킨다.
+else:
+	velocity.x = move_toward(velocity.x, _direction * _speed, _deceleration * delta)
+```
+- _direction 값은 -1, 0, 1 세개의 값 중 한가지이다.
+> ## 플레이어가 입력 버튼에서 손을 때었다면 == `_direction == 0`
+> - 이때는, `velocity.x` 를 사용하여, `X축의 속도`를
+> - `move_toward(velocity.x, 0, _deceleration * delta)` 코드를 이용하여 
+> - `X축의 속도(velocity.x)`를 `감속 X 1프레임당(_deceleration * delta)` 속도로 `0 `으로 `향하게 한다(move_toward)`.
+> - 즉, `move_toward` 메서드를 사용하여, X축의 속도를 감속 속도만큼 0으로 보내, `입력 버튼에서 손을 때었을 때` `움직임을 멈추는 것`을 구현하였다.
+> ## 플레이어가 입력 버튼을 누른다면 == `velocity.x == 0 || sign(_direction) == sign(velocity.x)`
+> - 이때는, 총 두개의 조건을 검사한다.<br><br>
+> `1. X축의 속도가 0(멈춰있는 상태)에서 입력 버튼을 눌렀는가?`<br>
+> `2. 입력 방향(sign(_direction))의 방향과 플레이어 캐릭터가 움직이는 방향(sign(velocity.x))이 같은가?`<br><br>
+> - 이 두개의 조건을 체크해서, `둘 중 하나라도 만족한다면(||)`, 입력 방향으로 X축의 속도를 만드는 `move_toward` 메서드를 실행시킨다.
+> - 해당 메서드에 대한 설명은 위에서 했으니 설명하겠다.
+> ## 반대방향으로 이동할러 한다면 == else:
+> - 남은 else 에는, `플레이어가 원래 방향에서 반대 방향 입력버튼을 눌렀을 때`를 생각하면 된다.
+> - 반대방향을 누르면, `반대방향으로 이동하게 속도를 빠르게 감소시킨다`.
+> - 이후, `계속 그 방향을 누르면`, `elif 조건문`을 `실행`시킨다.
+- 위와 같은 방식으로, 코드가 진행된다.
+```GDScript
+# _physics_process 사용시 추가해야 될 코드 == 충돌 고려하여 이동을 처리한다.
+move_and_slide()
+```
+- 마지막에는, 다음 코드를 작성하여, 정상적으로 움직일 수 있게 구현한다.
+
+
+## 3. 플레이어의 입력을 처리하는 player.gd 스크립트 파일 만들기
+``` GDScript
+# player.gd
+extends Node
+# 부모 노드를 게임 시작하자마자 가져와서 _character 변수에 저장한다.
+@onready var _character = get_parent() 
+
+func _input(event : InputEvent):
+	# jump 이벤트에 해당하는 입력 맵(스페이스 버튼)이 눌린다면?
+	if event.is_action_pressed("jump"):
+		# character.gd 파일 속 jump 메서드가 실행된다.
+		_character.jump()
+# 매 프레임 마다 진행
+func _process(_delta: float) -> void:
+	# character.gd 스크립트 속 run 함수를 실행. get_axis(negative_action, positive_action)
+	# run_left에 해당하는 입력 맵이 눌리게 되면, -1이 값이 return 되고, 이는 character.gd 파일 속 _direction 값으로 들어간다.
+	# run_right에 해당하는 입력 맵이 눌리면, +1 값이 return 되고, 이는 똑같이 _direction 값으로 들어간다.
+	# 아무것도 눌리지 않는다면 0 값이 return 되고 _direction 값으로 들어간다.
+	_character.run(Input.get_axis("run_left", "run_right"))
+```
+- 위 코드는 플레이어의 입력을 받는 player.gd 스크립트 파일이다.
+
+![](./2.png)
+- 위 사진은, character.gd 파일과 player.gd 파일의 노드 간의 관계를 보여주는 사진이다.
+> ### `character.gd` 스크립트는, `CharacterBody2D 노드속`에 적용된다.
+> ### `player.gd` 스크립트는, CharacterBody2D 노드의 `자식 노드`로 `Node2D`를 만들어서 그곳에 `적용`한다.
+- 위의 관계처럼 player.gd 파일을 적용시킨다.
+
+### 자 그러면 돌아와서 코드를 한번 살펴볼까?
 - 
