--- a/Godot/강의보면서 정리해놓기 2D 플랫포머 게임/캐릭터 이동 구현하기/캐릭터 이동 구현하기.md
+++ b/Godot/강의보면서 정리해놓기 2D 플랫포머 게임/캐릭터 이동 구현하기/캐릭터 이동 구현하기.md
@@ -84,7 +84,7 @@ func face_left():
 func face_right():
 	pass
 
-# 플레이어 입력에서 전달된 방향 (-1, 0, 1)을 _directino 에 저장한다.
+# 플레이어 입력에서 전달된 방향 (-1, 0, 1)을 _direction 에 저장한다.
 func run(direction : float):
 	# run 메서드로부터 받아온 direction 값을 _direction 값에 대입
 	_direction = direction
@@ -340,4 +340,61 @@ func _process(_delta: float) -> void:
 - 위의 관계처럼 player.gd 파일을 적용시킨다.
 
 ### 자 그러면 돌아와서 코드를 한번 살펴볼까?
-- 
+```GDScript
+@onready var _character = get_parent()
+```
+- 위 코드는, `부모 노드`를 게임이 시작하자마자 가져와 `_character` 변수에 `저장`하는 코드이다.
+- 위 사진을 통해, 우리는 `player.gd` 스크립트 파일을 가진, `Player 이름의 노드(NODE 2D)`를 `Player 노드(CharacterBody2D)의 자식 노드로 설정`한 것을 알 수 있다.
+- 우리는 `player.gd 스크립트 파일을 사용`하여, `플레이어의 입력을 받고`, 이를 `부모 노드로 전달할 목적`으로 이 스크립트를 `제작`한 것이다.
+- 따라서, `부모 노드`를 받아서 `변수에 저장`하는 위 코드의 작업이 필요하다.
+---
+```GDScript
+func _input(event : InputEvent):
+	# jump 이벤트에 해당하는 입력 맵(스페이스 버튼)이 눌린다면?
+	if event.is_action_pressed("jump"):
+		# character.gd 파일 속 jump 메서드가 실행된다.
+		_character.jump()
+```
+1. `func _input(event : InputEvent):`를 사용하여, 입력 이벤트가 사용될 때마다, 이 메서드를 실행시킨다. 
+> `_input(event : InputEvent)` 는 모든 이벤트를 감지하는 Godot 내장 함수이다.<br>
+> 이때, `InputEvent` 는 다양한 입력 정보를 받을 수 있게 여러 하위 타입을 가진다.
+> 1. InputEventKey : 키보드 입력
+> 2. InputEventMouseButton : 마우스 클릭
+> 3. InputEventJoypadButton : 게임 패드 입력
+
+2.  `if event.is_action_pressed("jump"):` 코드가 사용되어, 설정된 `입력 맵` 설정에서 `jump` 에 해당하는 키 입력`(스페이스 바)`이 발생한다면?
+3. `_character.jump` 코드가 실행되어, 맨 첫번째 줄에서 저장된 `부모 노드` 속 `jump 메서드`를 실행시켜, 플레이어 `캐릭터`를 `점프`하게 만든다.
+```GDScript
+# character.gd 스크립트 파일 속 jump 메서드를 실행한다.
+
+func jump():
+	# 캐릭터가 바닥에 있다면? <br>
+	if is_on_floor():
+		# Y축 좌표로 JUMP_VELOCITY 만큼 속도를 준다. == 점프하게 한다.
+		velocity.y = JUMP_VELOCITY`
+```
+---
+```GDScript
+# 매 프레임 마다 진행
+func _process(_delta: float) -> void:
+	# character.gd 스크립트 속 run 함수를 실행. get_axis(negative_action, positive_action)
+	# run_left에 해당하는 입력 맵이 눌리게 되면, -1이 값이 return 되고, 이는 character.gd 파일 속 _direction 값으로 들어간다.
+	# run_right에 해당하는 입력 맵이 눌리면, +1 값이 return 되고, 이는 똑같이 _direction 값으로 들어간다.
+	# 아무것도 눌리지 않는다면 0 값이 return 되고 _direction 값으로 들어간다.
+	_character.run(Input.get_axis("run_left", "run_right"))
+```
+- 위 코드는 게임 진행 중 매 프레임마다 진행되는 코드이다.
+- 먼저, `Input.get_axis("run_left", "run_right")` 메서드가 보이는가?
+> ## `get_axis(negative_action, positive_action)` 코드란?
+> - 위 코드는, `negative_action` 에 해당하는 작업이 수행되면 `-1`을 반환
+> - `positive_action` 에 해당하는 작업이 수행되면 `1`을 반환한다.
+- `Input.get_axis` 가 사용되어서, `run_left`에 해당하는 입력이 발생하면, `-1`을 반환
+- `run_right`에 해당하는 입력이 발생하면 `1`을 반환한다.
+- 이후, `어떤 값이 반환되냐`에 따라서,
+> ### `_character.run(반환된_값)` 의 코드가 실행된다.
+- `_character.run`은, `부모 노드` 속 `run 메서드`를 `실행`하는 것이다.
+### 위 코드는, `플레이어의 입력`에 따라서 `-1`, `1`의 숫자를 가지고 `부모 노드`의 `run 메서드`에 이 `값`을 `전달`하여서, `플레이어의 이동 방향을 정하는 코드`이다.
+### 그래서, `왼쪽 버튼`에 해당하는 `키보드 키`를 입력하면 `-1`을 가지고 `run 메서드`가 실행되어서 `왼쪽으로 캐릭터가 이동`하는 것이며,
+### `오른쪽 버튼`에 해당하는 `키보드 키`를 입력하면 `+1`을 가지고 `run 메서드`가 실행되어 `오른쪽으로 캐릭터가 이동`하는 것이다.
+### 마지막으로, 이 코드는 `func _process(delta : float) -> void:` `속`에 있기 때문에, `매 프레임마다 유저의 입력을 받을 수 있다.`
+
