캐릭터 이동구현 중 중력 부분 완

--- a/Godot/강의보면서 정리해놓기 2D 플랫포머 게임/캐릭터 이동 구현하기/캐릭터 이동 구현하기.md
+++ b/Godot/강의보면서 정리해놓기 2D 플랫포머 게임/캐릭터 이동 구현하기/캐릭터 이동 구현하기.md
@@ -1,8 +1,8 @@
 # 캐릭터 이동 구현하기 (2025-05-20 ~ )
 > ## 바로가기
-> [1. 캐릭터를 타일 단위로 이동하게 구현하기](#1-globalgd-스크립트-파일로-픽셀-단위를-곱해서-캐릭터를-타일-단위로-이동하게-구현하기)<br>
-> [2. 캐릭터의 뼈대 구현하기](#2-이제-캐릭터의-기본적인-뼈대를-구현해봅시다)<br>
-> [3. 플레이어의 입력 처리하기](#3-플레이어의-입력을-처리하는-playergd-스크립트-파일-만들기)
+> [1. 캐릭터를 타일 단위로 이동하게 구현하기 global.gd](#1-globalgd-스크립트-파일로-픽셀-단위를-곱해서-캐릭터를-타일-단위로-이동하게-구현하기)<br>
+> [2. 캐릭터의 뼈대 구현하기 character.gd](#2-이제-캐릭터의-기본적인-뼈대를-구현해봅시다)<br>
+> [3. 플레이어의 입력 처리하기 player.gd](#3-플레이어의-입력을-처리하는-playergd-스크립트-파일-만들기)
 ## 1. Global.gd 스크립트 파일로, 픽셀 단위를 곱해서 캐릭터를 타일 단위로 이동하게 구현하기
 ### <span style="background-color:#E6E6FA; color : black; font-weight : bold;">캐릭터 속도를 구현할 때 왜 픽셀 단위를 신경써야 되나요?</span>
 - 우리가 캐릭터를 이동 시킬때는 속도 변수를 구현하고, 이를 토대로 캐릭터의 velocity 에 변수를 곱하거나 막 하는 식으로 구현한다.
@@ -45,8 +45,8 @@ var ppt : int = 32
 - 따라서, 다음 기능들에 대한 뼈대인 character.gd 스크립트 파일을 만들고,
 - 캐릭터들에 스크립트 파일을 넣는 식으로 구현하면 편할것이다.
 > 1. 캐릭터의 속도, 가속, 감속 에 대한 값을 인스펙터 창에서 구현하도록 변수 선언
-> 2. 캐릭터의 점프 속도에 대한 변수
-> 3. 게임 시작시, 속도, 가속, 감속데 대한 값을 픽셀 단위에서 타일 단위로 변환
+> 2. 캐릭터의 점프 높이와 속도에 대한 변수
+> 3. 게임 시작시, 속도, 가속, 감속에 대한 값을 픽셀 단위에서 타일 단위로 변환
 > 4. 플레이어 캐릭터 한정, 입력에 대한 방향 이동과 점프를 구현한 메서드
 > 5. 매 프레임마다 캐릭터의 중력과 이동을 처리하는 메서드
 >
@@ -57,16 +57,25 @@ extends CharacterBody2D
 
 # @export를 선언하여 인스펙터 창에서 조절 가능한 캐릭터 이동 설정값에 대한 변수를 선언한다.
 # 따라서, @export 가 있는 변수들은, player.tscn 씬을 선택하면 오른쪽 인스펙터 창에서, 해당 변수들의 값을 조절할 수 있다.
+@export_category("Locomotion")
 @export var _speed : float = 8
 # 가속을 나타내는 변수
 @export var _acceleration : float = 16
 # 감속을 나타내는 변수
 @export var _deceleration : float = 32
 
+# 아래 변수들에 대한 인스펙터 창에서의 묶음의 이름을 Jump로 설정함
+@export_category("Jump")
+# 캐릭터의 점프 높이에 대한 변수 => 2.5로 설정하여, 나중에 Global.ppt를 곱해서 타일 2개 반 높이로 점프 높이가 결정된다.
+@export var _jump_height : float = 2.5
 # 캐릭터의 점프 속도에 대한 변수
-const JUMP_VELOCITY = -400.0
+var _jump_velocity : float
 
-var _direction : float
+# 캐릭터가 공중에서 떨어질 때, 공중에서 캐릭터를 조작할 수 있게 만들기 위한 변수 선언
+@export var _air_control : float = 0.5
+
+# get the gravity from the project settings to be synced with Rigidbody nodes
+var gravity = ProjectSettings.get_setting("physics/2d/default_gravity")
 
 # gd 스크립트가 시작된다면? ppt 값을 곱해 실제 속도를 타일 단위로 변환한다.
 func _ready():
@@ -76,6 +85,12 @@ func _ready():
 	_acceleration *= Global.ppt
 	# _deceleration의 속도에 타일 하나당 픽셀 수를 곱해서 정상적인 속도를 준다.
 	_deceleration *= Global.ppt
+	# _jump_height의 속도에 타일 하나당 픽셀 수를 곱해서 정상적인 속도를 준다.
+	_jump_height *= Global.ppt
+	# 캐릭터의 점프 속도를 _jump_height * gravity * 2의 값을 루트한 값에 -1을 곱한 값으로 저장한다.
+	_jump_velocity = sqrt(_jump_height * gravity * 2) * -1
+
+var _direction : float
 
 #region Public Methods
 
@@ -92,17 +107,30 @@ func run(direction : float):
 func jump():
 	# 캐릭터가 바닥에 있다면?
 	if is_on_floor():
-		# Y축 좌표로 JUMP_VELOCITY 만큼 속도를 준다. == 점프하게 한다.
-		velocity.y = JUMP_VELOCITY
+		# Y축 좌표로 _jump_velocity 만큼 속도를 준다. == 점프하게 한다.
+		velocity.y = _jump_velocity
+		
+# 플레이어가 점프 버튼을 때었을 때, 캐릭터가 내려오게 만드는 기능
+func stop_jump():
+	if velocity.y < 0:
+		velocity.y = 0
 #endregion
 
 # 매 프레임마다 중력/이동을 처리한다.
 func _physics_process(delta: float) -> void:
-	# 캐릭터가 바닥에 있지 않다면? (중력 처리)
-	if not is_on_floor():
-		# y축에 + 방향으로 중력을 줘서 캐릭터를 아래로 떨어뜨린다.
-		velocity += get_gravity() * delta
-		
+	# 캐릭터가 바닥에 있다면?
+	if is_on_floor():
+		# _ground_physics = 지상 물리학 메서드로 실행한다.
+		_ground_physics(delta)
+	# 캐릭터가 공중에 있다면?
+	else:
+		# _air_physics = 공중 물리학 메서드로 실행한다.
+		_air_physics(delta)
+	# _physics_process 사용시 추가해야 될 코드 == 충돌 고려하여 이동을 처리한다.
+	move_and_slide()
+	
+# 지상 물리학 메서드
+func _ground_physics(delta : float):
 	# return 해서 받아온 _direction 값이 0이라면? (이동처리)
 	# 즉, 0으로 감소한다면
 	if _direction == 0:
@@ -117,9 +145,15 @@ func _physics_process(delta: float) -> void:
 	# 만약 반대 방향으로 이동할러고 한다면, 감속시킨다.
 	else:
 		velocity.x = move_toward(velocity.x, _direction * _speed, _deceleration * delta)
-		
-	# _physics_process 사용시 추가해야 될 코드 == 충돌 고려하여 이동을 처리한다.
-	move_and_slide()
+	
+# 항공 물리학 메서드
+func _air_physics(delta : float):
+	# y축에 + 방향으로 중력을 줘서 캐릭터를 아래로 떨어뜨린다.
+	velocity += get_gravity() * delta
+	# 만약 방향이 0이 아니라면 = 플레이어가 공중에서 캐릭터를 좌우로 움직인다면?
+	if _direction:
+		# x 축의 속도를 공중에서 제어를 할수는 있지만, _air_control(0.5)를 곱해서 절반정도의 속도로 조절하게 만든다. = 플레이어가 공중에서 약간의 좌우 이동을 가능하게 만듬.
+		velocity.x = move_toward(velocity.x, _direction * _speed, _acceleration * _air_control * delta)
 ```
 - 이곳에서 보기 힘들다면, 코드를 복사한 후, GDScript 에서 확인하면 될 것같다.
 - 차근차근 살펴봅시다. 할 수 있다! :)
@@ -127,16 +161,29 @@ func _physics_process(delta: float) -> void:
 ```GDScript
 # @export를 선언하여 인스펙터 창에서 조절 가능한 캐릭터 이동 설정값에 대한 변수를 선언한다.
 # 따라서, @export 가 있는 변수들은, player.tscn 씬을 선택하면 오른쪽 인스펙터 창에서, 해당 변수들의 값을 조절할 수 있다.
+@export_category("Locomotion")
 @export var _speed : float = 8
 # 가속을 나타내는 변수
 @export var _acceleration : float = 16
 # 감속을 나타내는 변수
 @export var _deceleration : float = 32
+
+# 아래 변수들에 대한 인스펙터 창에서의 묶음의 이름을 Jump로 설정함
+@export_category("Jump")
+# 캐릭터의 점프 높이에 대한 변수 => 2.5로 설정하여, 나중에 Global.ppt를 곱해서 타일 2개 반 높이로 점프 높이가 결정된다.
+@export var _jump_height : float = 2.5
+# 캐릭터의 점프 속도에 대한 변수
+var _jump_velocity : float
+
+# 캐릭터가 공중에서 떨어질 때, 공중에서 캐릭터를 조작할 수 있게 만들기 위한 변수 선언
+@export var _air_control : float = 0.5
 ```
 - 위 부분이 바로 캐릭터의 속도, 가속, 감속에 대한 값을 인스펙터 창에서 설정할 수 있게 하는 코드이다.
 - > 속도 == `_speed : float = 8` <br>
   > 가속 == `_acceleration : float = 16` <br>
   > 감속 == `_deceleration : float = 32` <br>
+  > 점프 높이 == `_jump_height : float = 2.5` <br>
+  > 공중 조작 == `_air_control : float = 0.5` <br>
 - 위의 변수들이 바로 각각에 대한 값들을 담는 변수이다.
 - 그리고, 코드를 살펴보면,
 ```GDScript
@@ -147,14 +194,25 @@ func _physics_process(delta: float) -> void:
 - 유니티의 public과 비슷한 개념으로 이해했다.<br>
 ![](./1.png)<br>
 - 빨간 네모 박스들 중 맨 오른쪽 인스펙터 창을 보면, 해당 변수들의 값을 조절할 수 있게 설정된 것을 볼 수 있다.
-- 즉, `캐릭터들`마다 `각각의 속도, 가속, 감속`를 스크립트 파일 속이 아닌, 밖`(=인스펙터창)`에서도 설정할 수 있게 되었다. 만세!
+- 즉, `캐릭터들`마다 `각각의 속도, 가속, 감속, 점프 높이, 공중 조작`를 스크립트 파일 속이 아닌, 밖`(=인스펙터창)`에서도 설정할 수 있게 되었다. 만세!
+- 또한, 맨 위에 `@export_category` 키워드를 사용하여서, 각 변수들의 칸 이름을 설정하였다.
+
+![](./3.png)<br>
+- 인스펙터 창 속 빨간 네모박스에 이름이 설정된 것이 보이는가?
 ---
-### 2-2. 캐릭터의 점프 속도에 대한 변수
+### 2-2. 캐릭터의 점프 속도와 점프 높이에 대한 변수
 ``` GDScript
+# 캐릭터의 점프 높이에 대한 변수 => 2.5로 설정하여, 나중에 Global.ppt를 곱해서 타일 2개 반 높이로 점프 높이가 결정된다.
+@export var _jump_height : float = 2.5
 # 캐릭터의 점프 속도에 대한 변수
-const JUMP_VELOCITY = -400.0
+var _jump_velocity : float
+
+# get the gravity from the project settings to be synced with Rigidbody nodes
+var gravity = ProjectSettings.get_setting("physics/2d/default_gravity")
 ```
-- 간단하다. 상수로 선언하여, 변경할 수 없다.
+- 위에와 마찬가지로, 캐릭터의 `점프 높이`를 조절할 수 있게 설정하였다. `@export` 를 사용함.
+- 또한, `_jump_height` 라는 변수에 2.5 값을 넣고, 2-3 에서 `타일 단위로 변환`하는 작업을 할 것이다.
+- `_jump_velocity` 변수는, 캐릭터의 `점프 속도`에 대한 변수로, 아래 2-3 에서 값을 조절할 것이다.
 ---
 ### 2-3. 게임 시작시 속도, 가속, 감속에 대한 값을 픽셀 단위에서 타일 단위로 변환
 ``` GDScript
@@ -166,10 +224,28 @@ func _ready():
 	_acceleration *= Global.ppt
 	# _deceleration의 속도에 타일 하나당 픽셀 수를 곱해서 정상적인 속도를 준다.
 	_deceleration *= Global.ppt
+	# _jump_height의 속도에 타일 하나당 픽셀 수를 곱해서 정상적인 속도를 준다.
+	_jump_height *= Global.ppt
+	# 캐릭터의 점프 속도를 _jump_height * gravity * 2의 값을 루트한 값에 -1을 곱한 값으로 저장한다.
+	_jump_velocity = sqrt(_jump_height * gravity * 2) * -1
 ```
 - 캐릭터의 속도, 가속, 감속에 해당하는 `변수`에 `Global.ppt` 를 사용하여, `전역 변수 ppt`의 값을 `곱`해주었다.
 - 따라서, 캐릭터는 이제 특별히 값을 조절하지 않는 한, `속도`는 `8 * 32` 의 값을 가지게 된다.
 - 똑같은 방식으로 `가속, 감속`에도 `적용`이 된다.
+- 또한, 캐릭터의 `점프 높이`도, 픽셀 단위가 아닌, `타일 단위로 조절`하여, `캐릭터가 점프하였을 시`, `타일 2개 반 정도의 높이`로 제한하게 된다.
+- 또한, 캐릭터의 `점프 속도`를 `_jump_height * gravity * 2` 값의 `루트(sqrt)`한 값에 `-1`을 곱한 값으로 저장하여, `점프를 할 시, 해당 속도에 맞춰서 위로 점프하게 구현`한다.
+- -1을 한 이유는, `고도 엔진`에서는, `Y축 위로 가는 것`이 `음수`이기 때문이다. 양수면은 Y축 아래로 향한다.
+
+![](./제목%20없는%20동영상%20-%20Clipchamp로%20제작%20(5).gif)<br>
+- 딱 위에 코드까지만 구성한 후, 작성해보면 캐릭터의 점프가 살짝 붕뜨는걸 볼 수 있다.
+- 우리는 좀 더 현실적인 중력을 구현하기 위해, `프로젝트의 중력을 바꿀 것`이다.
+> 1. 프로젝트 -> 프로젝트 설정
+> 2. 물리 -> 2D
+> 3. 기본 중력 -> 9.8 * 32 * 8<br>
+> ![](./제목%20없는%20동영상%20-%20Clipchamp로%20제작%20(6).gif)
+
+![](./제목%20없는%20동영상%20-%20Clipchamp로%20제작%20(7).gif)<br>
+- 조금 더 현실적으로, 캐릭터가 떨어지는 것을 볼 수 있다.
 ---
 ### 2-4. 입력에 대한 방향 이동과 점프를 구현한 메서드
 ``` GDScript
@@ -185,7 +261,7 @@ func face_left():
 func face_right():
 	pass
 
-# 플레이어 입력에서 전달된 방향 (-1, 0, 1)을 _directino 에 저장한다.
+# 플레이어 입력에서 전달된 방향 (-1, 0, 1)을 _direction 에 저장한다.
 func run(direction : float):
 	# run 메서드로부터 받아온 direction 값을 _direction 값에 대입
 	_direction = direction
@@ -193,8 +269,13 @@ func run(direction : float):
 func jump():
 	# 캐릭터가 바닥에 있다면?
 	if is_on_floor():
-		# Y축 좌표로 JUMP_VELOCITY 만큼 속도를 준다. == 점프하게 한다.
-		velocity.y = JUMP_VELOCITY
+		# Y축 좌표로 _jump_velocity 만큼 속도를 준다. == 점프하게 한다.
+		velocity.y = _jump_velocity
+		
+# 플레이어가 점프 버튼을 때었을 때, 캐릭터가 내려오게 만드는 기능
+func stop_jump():
+	if velocity.y < 0:
+		velocity.y = 0
 #endregion
 ```
 - 코드 겁나 길구만 ㅋㅋㅋㅋ
@@ -217,7 +298,7 @@ var _direction : float
 
 #### `3. player.gd 파일에서 준 값을 변수에 저장`
 ``` GDScript
-# 플레이어 입력에서 전달된 방향 (-1, 0, 1)을 _directino 에 저장한다.
+# 플레이어 입력에서 전달된 방향 (-1, 0, 1)을 _direction 에 저장한다.
 func run(direction : float):
 	# run 메서드로부터 받아온 direction 값을 _direction 값에 대입
 	_direction = direction
@@ -228,16 +309,44 @@ func run(direction : float):
 - 즉, `player.gd` 스크립트 파일에서 `전달한 값`을 `_direction` 변수에 `저장`하는 `메서드`이다.
 - player.gd 스크립트에서 어떻게 character.gd 파일 속 run 메서드를 실행시켜요?
 - `3단`에서 설명하니 기다려라.
+
+#### 4. 플레이어 점프와 점프 버튼을 때었을 시 떨어지는 것 구현
+``` GDScript
+func jump():
+	# 캐릭터가 바닥에 있다면?
+	if is_on_floor():
+		# Y축 좌표로 _jump_velocity 만큼 속도를 준다. == 점프하게 한다.
+		velocity.y = _jump_velocity
+		
+# 플레이어가 점프 버튼을 때었을 때, 캐릭터가 내려오게 만드는 기능
+func stop_jump():
+	# y 축의 속도가 0보다 작다 => 캐릭터가 위로 점프하는 중이다.
+	if velocity.y < 0:
+		# y축의 속도를 0으로 만들어버린다. => 캐릭터가 아래로 추락하게 만든다.
+		velocity.y = 0
+```
+- 위의 jump() 메서드와 stop_jump() 메서드는, player.gd 스크립트 파일에서 플레이어의 입력을 받아서 이 메서드들을 호출하는 식으로 구성된다.
+- 해당 코드들은 간단한 코드이므로, 주석의 설명으로 대체하겠다.
 ---
+---
+
 ### `2-5. 매 프레임마다 캐릭터의 중력과 이동을 처리하는 메서드`
 ``` GDScript
 # 매 프레임마다 중력/이동을 처리한다.
 func _physics_process(delta: float) -> void:
-	# 캐릭터가 바닥에 있지 않다면? (중력 처리)
-	if not is_on_floor():
-		# y축에 + 방향으로 중력을 줘서 캐릭터를 아래로 떨어뜨린다.
-		velocity += get_gravity() * delta
-		
+	# 캐릭터가 바닥에 있다면?
+	if is_on_floor():
+		# _ground_physics = 지상 물리학 메서드로 실행한다.
+		_ground_physics(delta)
+	# 캐릭터가 공중에 있다면?
+	else:
+		# _air_physics = 공중 물리학 메서드로 실행한다.
+		_air_physics(delta)
+	# _physics_process 사용시 추가해야 될 코드 == 충돌 고려하여 이동을 처리한다.
+	move_and_slide()
+	
+# 지상 물리학 메서드
+func _ground_physics(delta : float):
 	# return 해서 받아온 _direction 값이 0이라면? (이동처리)
 	# 즉, 0으로 감소한다면
 	if _direction == 0:
@@ -252,42 +361,60 @@ func _physics_process(delta: float) -> void:
 	# 만약 반대 방향으로 이동할러고 한다면, 감속시킨다.
 	else:
 		velocity.x = move_toward(velocity.x, _direction * _speed, _deceleration * delta)
-		
-	# _physics_process 사용시 추가해야 될 코드 == 충돌 고려하여 이동을 처리한다.
-	move_and_slide()
+	
+# 항공 물리학 메서드
+func _air_physics(delta : float):
+	# y축에 + 방향으로 중력을 줘서 캐릭터를 아래로 떨어뜨린다.
+	velocity += get_gravity() * delta
+	# 만약 방향이 0이 아니라면 = 플레이어가 공중에서 캐릭터를 좌우로 움직인다면?
+	if _direction:
+		# x 축의 속도를 공중에서 제어를 할수는 있지만, _air_control(0.5)를 곱해서 절반정도의 속도로 조절하게 만든다. = 플레이어가 공중에서 약간의 좌우 이동을 가능하게 만듬.
+		velocity.x = move_toward(velocity.x, _direction * _speed, _acceleration * _air_control * delta)
 ```
 > - 우리는 `캐릭터의 움직임`을 `매 프레임마다` `재생`하게 만들것이다.
 > - 이를 위해 `func _process(delta: float) -> void:` 를 사용하여, 매 프레임마다 코드를 `재생`하도록 구현하였다.
 > - 유니티의 Update() 를 생각하면 된다.
 - 돌아와서, 코드를 하나씩 살펴보자.
-``` GDScript
-func _process(delta:float) -> void:
-```
-- 위 코드를 입력해서, 매 프레임마다 아래 코드들을 체크하도록 구현하였다.
 ```GDScript
-# 캐릭터가 바닥에 있지 않다면? (중력 처리)
-if not is_on_floor():
-	# y축에 + 방향으로 중력을 줘서 캐릭터를 아래로 떨어뜨린다.
-	velocity += get_gravity() * delta
+# 매 프레임마다 중력/이동을 처리한다.
+func _physics_process(delta: float) -> void:
+	# 캐릭터가 바닥에 있다면?
+	if is_on_floor():
+		# _ground_physics = 지상 물리학 메서드로 실행한다.
+		_ground_physics(delta)
+	# 캐릭터가 공중에 있다면?
+	else:
+		# _air_physics = 공중 물리학 메서드로 실행한다.
+		_air_physics(delta)
+	# _physics_process 사용시 추가해야 될 코드 == 충돌 고려하여 이동을 처리한다.
+	move_and_slide()
 ```
-- if not is_on_floor() 메서드를 활용하여, 캐릭터가 바닥에 있는지 확인한다.
-- 바닥에 있지 않다면? velocity += get_gravity() * delta 를 통해서, 중력을 줘버린다.
+- `if is_on_floor():` 조건문을 활용하여, 캐릭터가 바닥에 있는지 확인한다.
+- 바닥에 있다면? `_ground_physics(delta)` 를 사용하여, `지상 물리학`을 적용시킨다.
+- 바닥에 있지 않다면? `_air_physics(delta)` 를 사용하여, `공중 물리학`을 적용시킨다.
+- 또한, `_physics_process(delta : float) -> void` 를 사용하였기 때문에, `move_and_slide()` 를 사용하여서, `캐릭터를 움직이게 만들어야 한다`.
+
+#### 지상 물리학 `ground_physics(delta)`
 ``` GDScript
-# return 해서 받아온 _direction 값이 0이라면? (이동처리)
-if _direction == 0:
-	# x축의 속도(velocity.x)를 = velocity.x(현재 값)값으로부터 0(목표값)까지 한번에 _deceleration * delta 값의 속도로 갈수 있다.
-	# 즉, x축의 속도를 0으로 만들어버려 캐릭터의 움직임을 막는다.
-	velocity.x = move_toward(velocity.x, 0, _deceleration * delta)
-# x 축 속도가 0이거나 _direction의 방향이 velocity.x의 방향과 동일하다면?
-# 즉, 움직이지 않았던 상태에서 가속하거나 || 같은 방향으로 계속 움직일러 한다면?
-elif velocity.x == 0 || sign(_direction) == sign(velocity.x):
-	# 오른쪽, 또는 왼쪽을 결정하는 _direction 값 * _speed의 값으로 velocity.x 의 값을 _acceleration * delta 값의 속도로 이동한다.
-	velocity.x = move_toward(velocity.x, _direction * _speed, _acceleration * delta)
-# 만약 반대 방향으로 이동할러고 한다면, 감속시킨다.
-else:
-	velocity.x = move_toward(velocity.x, _direction * _speed, _deceleration * delta)
+# 지상 물리학 메서드
+func _ground_physics(delta : float):
+	# return 해서 받아온 _direction 값이 0이라면? (이동처리)
+	# 즉, 0으로 감소한다면
+	if _direction == 0:
+		# x축의 속도(velocity.x)를 = velocity.x(현재 값)값으로부터 0(목표값)까지 한번에 _deceleration * delta 값의 속도로 갈수 있다.
+		# 즉, x축의 속도를 0으로 만들어버려 캐릭터의 움직임을 막는다.
+		velocity.x = move_toward(velocity.x, 0, _deceleration * delta)
+	# x 축 속도가 0이거나 _direction의 방향이 velocity.x의 방향과 동일하다면?
+	# 즉, 움직이지 않았던 상태에서 가속하거나 || 같은 방향으로 계속 움직일러 한다면?
+	elif velocity.x == 0 || sign(_direction) == sign(velocity.x):
+		# 오른쪽, 또는 왼쪽을 결정하는 _direction 값 * _speed의 값으로 velocity.x 의 값을 _acceleration * delta 값의 속도로 이동한다.
+		velocity.x = move_toward(velocity.x, _direction * _speed, _acceleration * delta)
+	# 만약 반대 방향으로 이동할러고 한다면, 감속시킨다.
+	else:
+		velocity.x = move_toward(velocity.x, _direction * _speed, _deceleration * delta)
 ```
-- _direction 값은 -1, 0, 1 세개의 값 중 한가지이다.
+- `캐릭터가 바닥에 닿아있을 때`, `지상물리학`으로 아래 코드들을 실행시킨다.
+- `_direction 값`은 `-1, 0, 1` 세개의 값 중 `한가지`이다.
 > ## 플레이어가 입력 버튼에서 손을 때었다면 == `_direction == 0`
 > - 이때는, `velocity.x` 를 사용하여, `X축의 속도`를
 > - `move_toward(velocity.x, 0, _deceleration * delta)` 코드를 이용하여 
@@ -304,11 +431,24 @@ else:
 > - 반대방향을 누르면, `반대방향으로 이동하게 속도를 빠르게 감소시킨다`.
 > - 이후, `계속 그 방향을 누르면`, `elif 조건문`을 `실행`시킨다.
 - 위와 같은 방식으로, 코드가 진행된다.
+
+#### 항공 물리학 `_air_physics(delta)`
+- 항공 물리학을 추가하는 이유는, 간단하다.
+- `플랫포머 게임`에서, `캐릭터가 공중에서 떨어지는 중`에, `플레이어가 좌,우 버튼을 입력`하여 `공중에서 캐릭터가 조금이라도 움직이게 하는 기능`을 구현하기 위해서이다.
 ```GDScript
-# _physics_process 사용시 추가해야 될 코드 == 충돌 고려하여 이동을 처리한다.
-move_and_slide()
+# 항공 물리학 메서드
+func _air_physics(delta : float):
+	# y축에 + 방향으로 중력을 줘서 캐릭터를 아래로 떨어뜨린다.
+	velocity += get_gravity() * delta
+	# 만약 방향이 0이 아니라면 = 플레이어가 공중에서 캐릭터를 좌우로 움직인다면?
+	if _direction:
+		# x 축의 속도를 공중에서 제어를 할수는 있지만, _air_control(0.5)를 곱해서 절반정도의 속도로 조절하게 만든다. = 플레이어가 공중에서 약간의 좌우 이동을 가능하게 만듬.
+		velocity.x = move_toward(velocity.x, _direction * _speed, _acceleration * _air_control * delta)
 ```
-- 마지막에는, 다음 코드를 작성하여, 정상적으로 움직일 수 있게 구현한다.
+- 항공 물리학 메서드로, `y축 방향`으로 `캐릭터에 중력을 주어서`, `캐릭터가 떨어지게 구현`한다.
+- 이때, `X축의 방향`을 입력받는 `변수 _direction` 이 `0이 아니라면?` == `플레이어가 좌,우 버튼을 입력하고 있다면`
+- `캐릭터의 X축 속도`를 조절하여서, `공중에서 약간이라도 움직일 수 있게 만든다`.
+- 이를 통해, 공중에서 캐릭터가 떨어질 때 약간이라도 움직일 수 있게 구현하였다.
 
 
 ## 3. 플레이어의 입력을 처리하는 player.gd 스크립트 파일 만들기
@@ -323,6 +463,10 @@ func _input(event : InputEvent):
 	if event.is_action_pressed("jump"):
 		# character.gd 파일 속 jump 메서드가 실행된다.
 		_character.jump()
+	# 플레이어가 jump 이벤트에 해당하는 입력 맵을 땠으면?
+	if event.is_action_released("jump"):
+		# character.gd 파일 속 stop_jump 메서드를 실행하여 캐릭터를 떨어트림.
+		_character.stop_jump()
 # 매 프레임 마다 진행
 func _process(_delta: float) -> void:
 	# character.gd 스크립트 속 run 함수를 실행. get_axis(negative_action, positive_action)
@@ -354,6 +498,10 @@ func _input(event : InputEvent):
 	if event.is_action_pressed("jump"):
 		# character.gd 파일 속 jump 메서드가 실행된다.
 		_character.jump()
+	# 플레이어가 jump 이벤트에 해당하는 입력 맵을 땠으면?
+	if event.is_action_released("jump"):
+		# character.gd 파일 속 stop_jump 메서드를 실행하여 캐릭터를 떨어트림.
+		_character.stop_jump()
 ```
 1. `func _input(event : InputEvent):`를 사용하여, 입력 이벤트가 사용될 때마다, 이 메서드를 실행시킨다. 
 > `_input(event : InputEvent)` 는 모든 이벤트를 감지하는 Godot 내장 함수이다.<br>
@@ -373,6 +521,20 @@ func jump():
 		# Y축 좌표로 JUMP_VELOCITY 만큼 속도를 준다. == 점프하게 한다.
 		velocity.y = JUMP_VELOCITY`
 ```
+4. `if event.is_action_released("jump"):` 코드가 실행되어, jump 에 해당하는 키 `스페이스 바가 때어진다면?`
+5. `_character.stop_jump()` 메서드가 실행되어, 플레이어 `캐릭터가 떨어지게 만든다`.
+``` GDScript
+# character.gd 스크립트 파일 속 stop_jump 메서드를 실행한다.
+
+# 플레이어가 점프 버튼을 때었을 때, 캐릭터가 내려오게 만드는 기능
+func stop_jump():
+	if velocity.y < 0:
+		velocity.y = 0
+```
+![](./제목%20없는%20동영상%20-%20Clipchamp로%20제작%20(8).gif)<br>
+- 플레이어가 스페이스바 버튼을 살짝 눌러서 빠르게 스페이스 바 버튼을 때면?
+- 그만큼 빠르게 캐릭터가 아래로 떨어진다.
+
 ---
 ```GDScript
 # 매 프레임 마다 진행
